[package]
name = "rusthook"
version = "0.1.0"
edition = "2021"

[dependencies]
mittwald = { git = "https://github.com/Dirk007/rusthook", branch = "master" }
anyhow = { version = "1.0.89" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "sync" ]}
futures = { version = "0.3.30" }
log = { version = "0.4.17" }
env_logger = { version = "0.11.5" }
serde = { version = "1.0.210", features = ["derive"]}   
serde_json = { version = "1.0.128" }
base64 = "0.22.1"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
reqwest = { version = "0.12.7", features = ["json"] }
poem = "3.1.0"
async-trait = "0.1.83"

[lib]
name = "mittwald"
path = "src/lib.rs"

[[bin]]
name = "samplehooks"
path = "src/main.rs"
