[package]
name = "mittlife_cycles"
description = "the mittwald extension signature verifier"
version = "0.1.2"
edition = "2021"
authors = ["Dirk Faust <dirk@faustbande.de>", "Fabian Weik <fabian.weik@protonmail.com>"]
license = "MIT"
repository = "https://github.com/Dirk007/mittlife_cycles"
keywords = ["mittwald", "marketplace", "verification", "webhooks"]

[dependencies]
anyhow = { version = "1.0.91" }
log = { version = "0.4.22" }
env_logger = { version = "0.11.5" }
serde = { version = "1.0.213", features = ["derive"]}   
serde_json = { version = "1.0.132" }
base64 = "0.22.1"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
reqwest = { version = "0.12.8", features = ["json"] }
async-trait = { version = "0.1.83" }
poem = { version = "3.1.3", optional = true }
actix-web = { version = "4.9.0", optional = true }
mockall = "0.13.0"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "sync" ]}
futures = { version = "0.3.31" }

[lib]
name = "mittlife_cycles"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple/src/main.rs"

[features]
default = ["poemheader"]
poemheader = ["poem"]
actixheader = ["actix-web"]
