[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
mittlife_cycles = { path = "../../", features = ["poemheader"]}
anyhow = { version = "1.0.89" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "sync" ]}
futures = { version = "0.3.30" }
log = { version = "0.4.17" }
env_logger = { version = "0.11.5" }
serde = { version = "1.0.210", features = ["derive"]}   
serde_json = { version = "1.0.128" }
base64 = "0.22.1"
reqwest = { version = "0.12.7", features = ["json"] }
poem = "3.1.0"
